--- a/front/package.json
+++ b/front/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel serve index.html",
-    "build": "parcel build index.html --public-url .",
+    "build": "dotenv -e .env.production && your-build-command",
     "deploy": "gh-pages -d dist"
   },
   "keywords": [],
