--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,5 +18,5 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17"
   },
-  "homepage": "https://beomi.github.io/ssafy-2024-frontend/"
+  "homepage": "https://wannabedain.github.io/RAG_AI/frontend"
 }
